# media-proxy-lambda

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLANS.md  README.md  SPECIFICATION.md  dependencies.lock.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bootstrap.yml  test.yml
cmake/: Application.cmake  DependencyLock.cmake  GenerateCompliance.cmake  Hardening.cmake  Lcms2Cross.cmake  LittleEndian64Cross.cmake  StaticElfPolicy.cmake  Superbuild.cmake  VerifyStaticElf.cmake
cmake/dependencies/ada-idna/: CMakeLists.txt
cmake/dependencies/glib/: NormalizeGioPkgConfig.cmake  meson-cross.ini.in
cmake/dependencies/libexif/: CMakeLists.txt  config.h.in
cmake/dependencies/libffi/: CMakeLists.txt
cmake/dependencies/libnsgif/: CMakeLists.txt
cmake/dependencies/libpng/: CMakeLists.txt  libpng.pc.in
cmake/dependencies/libvips/: meson-cross.ini.in
cmake/dependencies/pixman/: meson-cross.ini.in
cmake/patches/: glib-2.88.2-disable-static-dlopen.patch  libaom-3.14.1-preserve-fortify.patch  libheif-1.22.2-use-cross-aom-discovery.patch  libvips-8.18.2-use-pinned-libnsgif.patch  pixman-0.46.4-clang-22-warnings.patch
cmake/toolchains/: llvm-musl-sanitizer.cmake  llvm-musl.cmake
include/mediaproxy/: handler.hpp  logging.hpp
include/mediaproxy/http/: address_policy.hpp  ca_bundle.hpp  curl_resolve_pin.hpp  dns_policy.hpp  dns_resolver.hpp  event.hpp  idna.hpp  origin_curl.hpp  origin_download.hpp  origin_response.hpp  query.hpp  redirect_policy.hpp  request_plan.hpp  response.hpp  url_policy.hpp
include/mediaproxy/media/: animated_conversion.hpp  apng.hpp  apng_compositor.hpp  apng_conversion.hpp  apng_decoder.hpp  classification.hpp  conversion.hpp  mime.hpp  resize.hpp  static_conversion.hpp  vips_runtime.hpp
include/mediaproxy/runtime/: client.hpp  deadline.hpp  invocation.hpp  next_response.hpp  socket_transport.hpp  streaming.hpp
src/: bootstrap.cpp  handler.cpp  logging.cpp
src/http/: address_policy.cpp  ca_bundle.cpp  curl_resolve_pin.cpp  dns_policy.cpp  dns_resolver.cpp  event.cpp  idna.cpp  origin_curl.cpp  origin_download.cpp  origin_response.cpp  percent_decode.hpp  query.cpp  redirect_policy.cpp  request_plan.cpp  response.cpp  url_policy.cpp
src/media/: animated_conversion.cpp  apng.cpp  apng_compositor.cpp  apng_conversion.cpp  apng_decoder.cpp  classification.cpp  conversion.cpp  mime.cpp  resize.cpp  static_conversion.cpp  vips_runtime.cpp
src/runtime/: client.cpp  deadline.cpp  invocation.cpp  next_response.cpp  socket_transport.cpp  streaming.cpp
tests/: handler_test.cpp  smoke_test.cpp
tests/cmake/: AdaIdnaBuildTest.cmake  BoringSslBuildTest.cmake  CaBundleBuildTest.cmake  ComplianceBundleTest.cmake  CurlBuildTest.cmake  ExpectSignalFailure.cmake  GlibBuildTest.cmake  HardeningFlagsTest.cmake  Lcms2BuildTest.cmake  LibExifBuildTest.cmake  LibExpatBuildTest.cmake  LibFfiBuildTest.cmake  LibJpegTurboBuildTest.cmake  LibNsgifBuildTest.cmake  LibPngBuildTest.cmake  LibWebPBuildTest.cmake  LibaomBuildTest.cmake  LibheifBuildTest.cmake  LibvipsBuildTest.cmake  Nghttp2BuildTest.cmake  Pcre2BuildTest.cmake  PixmanBuildTest.cmake  ReleaseBinaryPolicyTest.cmake  SanitizerDetectionTest.cmake  StaticElfPolicyTest.cmake  YyjsonBuildTest.cmake  ZlibBuildTest.cmake
tests/fixtures/events/: encoded-status.json  invalid-path-escape.json  manifest.json  media-duplicates.json  status.json
tests/fixtures/media/: README.md  generate-apng-fixtures.mjs
tests/fixtures/media/apng/: manifest.json
tests/fixtures/media/resize/: 7680x4320_1.avif
tests/fuzz/: apng_fuzzer.cpp  ico_fuzzer.cpp  mime_fuzzer.cpp  request_fuzzer.cpp  runtime_fuzzer.cpp
tests/fuzz/corpus/request/: event.json  query.txt  url.txt
tests/hardening/: cfi_violation.cpp  fortify.cpp  stack_smash.cpp
tests/http/: address_policy_test.cpp  curl_resolve_pin_test.cpp  dns_policy_test.cpp  dns_resolver_test.cpp  event_test.cpp  origin_curl_test.cpp  origin_download_test.cpp  origin_redirect_download_test.cpp  origin_response_test.cpp  origin_tls_test.cpp  query_test.cpp  redirect_policy_test.cpp  response_test.cpp  selectors_test.cpp  url_policy_test.cpp
tests/manifests/: README.md  vector-inventory.json
tests/media/: animated_conversion_test.cpp  animated_fixture_test.cpp  apng_compositor_test.cpp  apng_conversion_test.cpp  apng_decoder_test.cpp  apng_test.cpp  classification_test.cpp  conversion_test.cpp  mime_test.cpp  resize_fixture_test.cpp  resize_test.cpp  static_conversion_test.cpp  vips_runtime_test.cpp
tests/runtime/: bootstrap_test.cpp  client_test.cpp  deadline_test.cpp  invocation_test.cpp  next_response_test.cpp  socket_transport_test.cpp  streaming_test.cpp
tests/sanitizer/: detection_probe.cpp
tests/smoke/: boringssl_test.cpp  build_test.cpp  curl_test.cpp  glib_test.cpp  idna_test.cpp  lcms2_test.cpp  libaom_test.cpp  libexif_test.cpp  libexpat_test.cpp  libffi_test.cpp  libheif_test.cpp  libjpeg_turbo_test.cpp  libnsgif_test.cpp  libpng_test.cpp  libvips_test.cpp  libwebp_test.cpp  nghttp2_test.cpp  pcre2_test.cpp  pixman_test.cpp  yyjson_test.cpp  zlib_test.cpp
tests/vectors/: address-policy.json  idna.json  mime.json  query.json  selectors.json  url-policy.json
